--- a/yes-not/support.html
+++ b/yes-not/support.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body>
+    <body class="two-sidebars sidebar-first sidebar-second">
         <div class="wrapper">
         	<div class="container">
         		<div class="region-header">
