--- a/yes-not/game-1.html
+++ b/yes-not/game-1.html
@@ -43,71 +43,46 @@
             				</ul>
             			</div>
             			<div class="region-content">
-            				<div class="bk-btn-play">
-            					<button class="btn-play">играть</button>
-            				</div>
-            				<div class="bk-menu-profile">
-                                <ul class="items">
-                                    <li class="item">
-                                        <a href="#" class="active link-profile">
-                                            <span class="icon"></span>
-                                            <span class="icon"></span>
-                                            <span class="icon"></span>
-                                        </a>
-                                    </li>
-                                    <li class="item"><a href="#">ЛИЧНЫЕ ДАННЫЕ</a></li>
-                                    <li class="item"><a href="#">мои рефералы</a></li>
-                                    <li class="item"><a href="#">история активности</a></li>
-                                </ul>
-                            </div>
-                            <div class="bk-vip-description">
-                                <div class="bk_title">Что такое VIP-Аккаунт? Что дает VIP-Аккаунт?</div> 
-                                <div class="bk_content">
-                                    <div class="content">
-                                        <p>VIP-Аккаунт дает Вам возможность играть БЕЗ таймера времени!
-                                            Вам предоставляется возможность играть БЕЗ таймера на все ставки!
-                                            В платном и бесплатном режиме таймер времени ОТКЛЮЧЕН!</p>
-                                    </div>
-                                    <div class="price">Цена активации VIP-Аккаунта на 24 часа = 3500 руб!</div>
-                                    <div class="form-vip-activation">
-                                        <form action="">
-                                            <div class="form-submit-wrap">
-                                                <input type="submit" class="form-submit" value="активировать VIP - аккаунт">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div> 
-                            </div>
+            				
             			</div>
             			<div class="region-sidebar-first">
-            				<div class="bk-game-score">
-        						<div class="bk_title">ИГРОВОЙ СЧЕТ</div>
-        						<div class="bk_content">
-        							<table class="table-price">
-        								<tr>
-        									<td><span class="value">350</span> <span class="currency">Рублей</span></td>
-        								</tr>
-        							</table>
-                                    <div class="refill-wrap">
-                                        <a href="" class="refill">пополнить</a>
-                                    </div>
-        						</div>
-            				</div>
-            			</div>
-            			<div class="region-sidebar-second">
-            				<div class="bk-winning-score">
-                                <div class="bk_title">ИГРОВОЙ СЧЕТ</div>
+            				<div class="bk-question-num">
                                 <div class="bk_content">
-                                    <table class="table-price">
-                                        <tr>
-                                            <td> <span class="value">12000</span> <span class="currency">Рублей</span></td>
-                                        </tr>
-                                    </table>
-                                    <div class="withdraw-wrap">
-                                        <a href="" class="withdraw">вывести</a>
-                                    </div>
+                                    <div class="item"><span class="question">10</span></div>
+                                    <div class="item"><span class="question">9</span></div>
+                                    <div class="item"><span class="question">8</span></div>
+                                    <div class="item"><span class="question">7</span></div>
+                                    <div class="item"><span class="question">6</span></div>
+                                    <div class="item"><span class="question">5</span></div>
+                                    <div class="item"><span class="question">4</span></div>
+                                    <div class="item"><span class="question">3</span></div>
+                                    <div class="item"><span class="question">2</span></div>
+                                    <div class="item"><span class="question">1</span></div>
                                 </div>
                             </div>
+            			</div>
+            			<div class="region-sidebar-second">
+            				<div class="bk-authorization">
+            					<div class="bk_inner">
+            						<div class="bk_title">авторизация</div>
+            						<div class="bk_content clearfix">
+            							<table class="table-username">
+                                            <tr>
+                                                <td>
+                                                    <span class="greeting">Здравствуйте,</span>
+                                                    <span class="username">Рудольф</span>
+                                                </td>
+                                            </tr>                         
+                                        </table>
+                                        <div class="user-profile-wrap">
+                                            <a href="#" class="user-profile">личный кабинет</a>
+                                        </div>
+                                        <div class="logout-wrap">
+                                            <a href="#" class="logout">Выход</a>
+                                        </div>
+            						</div>
+            					</div>
+            				</div>
             			</div>
                     </div>
         			<div class="bk-social">
