--- a/yes-not/hand-replenishment-3.html
+++ b/yes-not/hand-replenishment-3.html
@@ -60,23 +60,23 @@
                                     <li class="item"><a href="#">история активности</a></li>
                                 </ul>
                             </div>
-                            <div class="bk-vip-description">
-                                <div class="bk_title">Что такое VIP-Аккаунт? Что дает VIP-Аккаунт?</div> 
+
+                            <div class="bk-requisites-info">
+                                <div class="bk_title">Реквизиты для оплаты заявки!</div>
                                 <div class="bk_content">
-                                    <div class="content">
-                                        <p>VIP-Аккаунт дает Вам возможность играть БЕЗ таймера времени!
-                                            Вам предоставляется возможность играть БЕЗ таймера на все ставки!
-                                            В платном и бесплатном режиме таймер времени ОТКЛЮЧЕН!</p>
+                                    <p>В поле «Кому» укажите кошелек: <strong>R117928567798</strong><br>    
+                                        В поле «Сумма в WMR» укажите сумму: <strong>30 00 руб.</strong><br>
+                                        В поле «Примечание» укажите свой логин: <strong>Рудольф</strong></p>
+
+                                    <p>Пожалуйста, будьте внимательны! Все поля должны быть заполнены в точном соответствии с инструкцией, в противном случае, платеж может не пройти!</p>
+
+                                    <p><strong>Внимание!</strong> Нажмите кнопку «ПРОВЕРИТЬ ОПЛАТУ» если Вы оплатили заявку!</p>
+                                </div>
+                                <div class="bk_footer">
+                                    <div class="btn-wrap">
+                                        <button class="btn">ПРОВЕРИТЬ ОПЛАТУ!</button>
                                     </div>
-                                    <div class="price">Цена активации VIP-Аккаунта на 24 часа = 3500 руб!</div>
-                                    <div class="form-vip-activation">
-                                        <form action="">
-                                            <div class="form-submit-wrap">
-                                                <input type="submit" class="form-submit" value="активировать VIP - аккаунт">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div> 
+                                </div>
                             </div>
             			</div>
             			<div class="region-sidebar-first">
