--- a/yes-not/personal-edit-new-message.html
+++ b/yes-not/personal-edit-new-message.html
@@ -42,6 +42,11 @@
             					<li class="item"><a href="#">тех.поддержка</a></li>
             				</ul>
             			</div>
+                        <div class="bk-message-info">
+                            <div class="bk_content">
+                                <span class="message-info new">у вас новое сообщение</span>
+                            </div>
+                        </div>
             			<div class="region-content">
             				<div class="bk-btn-play">
             					<button class="btn-play">играть</button>
@@ -60,23 +65,36 @@
                                     <li class="item"><a href="#">история активности</a></li>
                                 </ul>
                             </div>
-                            <div class="bk-vip-description">
-                                <div class="bk_title">Что такое VIP-Аккаунт? Что дает VIP-Аккаунт?</div> 
+
+                            <div class="bk-personal-edit">
                                 <div class="bk_content">
-                                    <div class="content">
-                                        <p>VIP-Аккаунт дает Вам возможность играть БЕЗ таймера времени!
-                                            Вам предоставляется возможность играть БЕЗ таймера на все ставки!
-                                            В платном и бесплатном режиме таймер времени ОТКЛЮЧЕН!</p>
-                                    </div>
-                                    <div class="price">Цена активации VIP-Аккаунта на 24 часа = 3500 руб!</div>
-                                    <div class="form-vip-activation">
-                                        <form action="">
-                                            <div class="form-submit-wrap">
-                                                <input type="submit" class="form-submit" value="активировать VIP - аккаунт">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div> 
+                                    <form action="">
+                                        <div class="form-text-wrap">
+                                            <input type="text" class="form-text dark" placeholder="ваш логин" value="Рудольф">
+                                            <i class="i-required"></i>
+                                        </div>  
+                                        <div class="form-text-wrap">
+                                            <input type="text" class="form-text dark" placeholder="e-mail" value="asd@mail.ru">
+                                            <i class="i-required"></i>
+                                        </div>
+                                        <div class="form-text-wrap">
+                                            <input type="text" class="form-text dark" placeholder="Skype">
+                                        </div>
+                                        <div class="form-text-wrap">
+                                            <input type="text" class="form-text dark" placeholder="пароль" value="bbb">
+                                            <i class="i-required"></i>
+                                        </div>
+                                        <div class="form-text-wrap">
+                                            <input type="text" class="form-text darker" placeholder="Вас пригласил!">
+                                        </div>
+                                        <div class="form-text-wrap">
+                                            <input type="text" class="form-text dark" placeholder="WMR - Яндекс.Деньги - QIWI">
+                                        </div>
+                                        <div class="form-submit-wrap">
+                                            <input type="submit" class="form-submit" value="сохранить">
+                                        </div>
+                                    </form>
+                                </div>    
                             </div>
             			</div>
             			<div class="region-sidebar-first">
@@ -153,6 +171,30 @@
                     </div>
                     <div class="link-game-type-2-wrap">
                         <a href="#" class="link-game-type-2">игра на «реальные деньги»</a>
+                    </div>
+                </div>
+            </div>
+            <div class="bk-new-message">
+                <div class="bk_title">Новое сообщение от Администрации проекта!</div>
+                <div class="bk_content">
+                    <p>Уважаемый пользоватеь! 25 - 12 - 2015 доступ к игре будет недоступен с 20:00 до 22:00 из-за профилактических работ на сервере. просим прощения за временное неудобство.</p>
+                    <p class="text-uppercase">С уважением, администрация сайта!</p>
+                </div>
+                <div class="bk_footer">
+                    <div class="buttons-wrap">
+                        <button class="btn-ok">спасибо</button>
+                        <button class="btn-reply">ответить</button>
+                    </div>
+                    <div class="form-reply-wrap">
+                        <div class="form_title">Ваш ответ</div>  
+                        <form action="">
+                            <div class="form-textaria-wrap">
+                                <textarea name="" class="form-textarea darker" placeholder="Сообщение"></textarea>
+                            </div>
+                            <div class="form-submit-wrap">
+                                <input type="submit" class="form-submit" value="Отправить">
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
