--- a/yes-not/vip-description-taimer.html
+++ b/yes-not/vip-description-taimer.html
@@ -69,13 +69,7 @@
                                             В платном и бесплатном режиме таймер времени ОТКЛЮЧЕН!</p>
                                     </div>
                                     <div class="price">Цена активации VIP-Аккаунта на 24 часа = 3500 руб!</div>
-                                    <div class="form-vip-activation">
-                                        <form action="">
-                                            <div class="form-submit-wrap">
-                                                <input type="submit" class="form-submit" value="активировать VIP - аккаунт">
-                                            </div>
-                                        </form>
-                                    </div>
+                                    <div class="vip-countdown-wrap"><div class="vip-countdown"></div></div>
                                 </div> 
                             </div>
             			</div>
@@ -162,6 +156,9 @@
         <script src="js/jquery.colorbox.js"></script>
         <script src="js/jquery.mousewheel.js"></script>
         <script src="js/mwheelIntent.js"></script>
+        <script src="js/jquery.plugin.min.js"></script>
+        <script src="js/jquery.countdown.min.js"></script>
+        <script src="js/jquery.countdown-ru.js"></script>
         <script src="js/jquery.jscrollpane.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
