--- a/yes-not/game-1-no-rate.html
+++ b/yes-not/game-1-no-rate.html
@@ -80,12 +80,11 @@
             			<div class="region-sidebar-second">
                             <div class="bk-your-rate">
                                 <div class="bk_inner">
-                                    <div class="bk_title">Ваша ставка</div>
+                                    <div class="bk_title"></div>
                                     <div class="bk_content clearfix">
-                                        <div class="img-wrap"><img src="img/img-rate-1000.png" alt="" class="img"></div>
-                                        <div class="value">1000 рублей</div>
+                                        <div class="no-rate">ИГРА НА ПРОСТО ТАК</div>
                                     </div>
-                                    <div class="bk_footer">Выигрыш может составить 10000 рублей</div>
+                                    <div class="bk_footer"></div>
                                 </div>
                             </div>
             			</div>
