--- a/yes-not/game-1-vip.html
+++ b/yes-not/game-1-vip.html
@@ -47,7 +47,7 @@
                                 <div class="bk_content">
                                     <div class="present">
                                         <div class="countdown-wrap">
-                                            <div class="countdown" id="game-countdown"></div>
+                                            <span class="vip">vip</span>
                                         </div>
                                     </div>
                                     <div class="question-wrap">
