--- a/yes-not/game-1-wrong.html
+++ b/yes-not/game-1-wrong.html
@@ -54,7 +54,7 @@
                                         <div class="question">Автор фразы  «Красота спасет мир» -  Тургенев?</div>
                                     </div>
                                     <div class="buttons-wrap">
-                                        <button class="btn-yes">ДА</button>
+                                        <button class="btn-yes wrong">ДА</button>
                                         <span class="divider">или</span>
                                         <button class="btn-no">НЕТ</button>
                                     </div>
