--- a/yes-not/game-select-rate.html
+++ b/yes-not/game-select-rate.html
@@ -118,6 +118,36 @@
             </div>
         </div>
         <div class="region-hidden">
+            <div class="bk-not-enough-money">
+                <div class="bk_title">На балансе недостаточно средств, чтобы начать игру!!!</div>
+                <div class="bk_content">
+                    <div class="btn-wrap"><button class="btn-simple-game">игра на «просто так»</button></div>
+                    <div class="btn-wrap"><button class="btn-fill-up">ПОПОЛНИТЬ баланс</button></div>
+                </div>
+            </div>
+            <div class="bk-no-access">
+                <div class="bk_content">У Вас нет доступа к данной странице!!!<br>Пожалуйста, Авторизируйтесь!!!</div>
+            </div>
+            <div class="bk-you-lose">
+                <div class="bk_content">
+                    <div class="img-wrap"><img src="img/you-lose.png" alt=""></div>
+                    <div class="box">
+                        <div class="title">Игра окончена!!!<br>Вы проиграли!!!</div>
+                        <div class="btn-wrap"><button class="btn-repeat">играть еще</button></div>
+                        <div class="btn-wrap"><button class="btn-go-personal">ЛИЧНЫЙ КАБИНЕТ</button></div>
+                    </div>   
+                </div>
+            </div>
+            <div class="bk-you-win">
+                <div class="bk_content">
+                    <div class="img-wrap"><img src="img/you-win.png" alt=""></div>
+                    <div class="box">
+                        <div class="title">ПОЗДРАВЛЯЕМ!!!<br>Вы выиграли!!!</div>
+                        <div class="btn-wrap"><button class="btn-repeat">играть еще</button></div>
+                        <div class="btn-wrap"><button class="btn-go-personal">ЛИЧНЫЙ КАБИНЕТ</button></div>
+                    </div>   
+                </div>
+            </div>
         </div>
         <script src="js/vendor/jquery-1.11.3.min.js"></script>
         <script src="js/vendor/jquery-ui.min.js"></script>
