--- a/yes-not/ban.html
+++ b/yes-not/ban.html
@@ -23,7 +23,7 @@
         			</div>
         			<div class="site-name">
         				<div class="row">
-        					<span class="box"><span class="box_inner">Онлайн игра «<span class="mark">Да или Нет</span>»</span></span>
+        					<span class="box"><span class="box_inner">Онлайн игра <span class="mark">«Да или Нет»</span></span></span>
         				</div>
         				<div class="row">
                             <span class="box"><span class="box_inner">С выводом реальных денежных средств!</span></span>
@@ -78,7 +78,7 @@
             			</div>
             			<div class="region-sidebar-second">
             				<div class="bk-winning-score">
-                                <div class="bk_title">ИГРОВОЙ СЧЕТ</div>
+                                <div class="bk_title">выигрышный счет</div>
                                 <div class="bk_content">
                                     <table class="table-price">
                                         <tr>
