--- a/yes-not/game-select-rate.html
+++ b/yes-not/game-select-rate.html
@@ -23,7 +23,7 @@
         			</div>
         			<div class="site-name">
         				<div class="row">
-        					<span class="box"><span class="box_inner">Онлайн игра «<span class="mark">Да или Нет</span>»</span></span>
+        					<span class="box"><span class="box_inner">Онлайн игра <span class="mark">«Да или Нет»</span></span></span>
         				</div>
         				<div class="row">
                             <span class="box"><span class="box_inner">С выводом реальных денежных средств!</span></span>
