--- a/yes-not/hand-replenishment-2.html
+++ b/yes-not/hand-replenishment-2.html
@@ -24,7 +24,7 @@
         			</div>
         			<div class="site-name">
         				<div class="row">
-        					<span class="box"><span class="box_inner">Онлайн игра «<span class="mark">Да или Нет</span>»</span></span>
+        					<span class="box"><span class="box_inner">Онлайн игра <span class="mark">«Да или Нет»</span></span></span>
         				</div>
         				<div class="row">
                             <span class="box"><span class="box_inner">С выводом реальных денежных средств!</span></span>
@@ -76,7 +76,7 @@
                                      </div>
                                      <div class="info">Не забудьте вернуться на наш сайт после оплаты!!!</div>
                                      <div class="link-wrap">
-                                         <a href="#" class="link">ПЕРЕЙТИ НА САЙТ WEBMONEY ДЛЯ ОПЛАТІ ЗАЯВКИ</a>
+                                         <a href="#" class="link">ПЕРЕЙТИ НА САЙТ WEBMONEY ДЛЯ ОПЛАТЫ ЗАЯВКИ</a>
                                      </div>       
                                 </div>
                             </div>
@@ -98,7 +98,7 @@
             			</div>
             			<div class="region-sidebar-second">
             				<div class="bk-winning-score">
-                                <div class="bk_title">ИГРОВОЙ СЧЕТ</div>
+                                <div class="bk_title">выигрышный счет</div>
                                 <div class="bk_content">
                                     <table class="table-price">
                                         <tr>
