--- a/yes-not/personal-edit-new-message.html
+++ b/yes-not/personal-edit-new-message.html
@@ -177,7 +177,7 @@
             <div class="bk-new-message">
                 <div class="bk_title">Новое сообщение от Администрации проекта!</div>
                 <div class="bk_content">
-                    <p>Уважаемый пользоватеь! 25 - 12 - 2015 доступ к игре будет недоступен с 20:00 до 22:00 из-за профилактических работ на сервере. просим прощения за временное неудобство.</p>
+                    <p>Уважаемый пользователь! 25 - 12 - 2015 доступ к игре будет недоступен с 20:00 до 22:00 из-за профилактических работ на сервере. Просим прощения за временное неудобство.</p>
                     <p class="text-uppercase">С уважением, администрация сайта!</p>
                 </div>
                 <div class="bk_footer">
