--- a/yes-not/support.html
+++ b/yes-not/support.html
@@ -67,7 +67,7 @@
                                                 </div>
                                             </form>
                                         </div>
-                                        <button class="btn-order-sup">оформить новый запрос в техподдержку</button>
+                                        <button class="btn-order-sup">отправить новый запрос в техподдержку</button>
                                     </div>
                                     <table class="table-data">
                                         <thead>
