--- a/yes-not/vip-description-taimer.html
+++ b/yes-not/vip-description-taimer.html
@@ -68,7 +68,7 @@
                                             Вам предоставляется возможность играть БЕЗ таймера на все ставки!
                                             В платном и бесплатном режиме таймер времени ОТКЛЮЧЕН!</p>
                                     </div>
-                                    <div class="price">Цена активации VIP-Аккаунта на 24 часа = 3500 руб!</div>
+                                    <div class="price">Ваш vip-аккаунт активирован на 24 часа</div>
                                     <div class="vip-countdown-wrap"><div class="vip-countdown"></div></div>
                                 </div> 
                             </div>
