--- a/yes-not/index.html
+++ b/yes-not/index.html
@@ -32,7 +32,7 @@
         		</div>
         		<div class="region-middle">
                     <div class="region-middle_inner clearfix">
-            			<div class="bk-hint">Уважаемые пользователи! Рады сообщить Вам что были подключены автовыплаты на WebMoney WMR - Яндекс.Деньги - QIWI кошелек!</div>
+            			<div class="bk-hint"><marquee behavior="scroll" direction="left">Уважаемые пользователи! Рады сообщить Вам что были подключены автовыплаты на WebMoney WMR - Яндекс.Деньги - QIWI кошелек!</marquee></div>
             			<div class="bk-menu">
             				<ul class="items">
             					<li class="item"><a href="#">Главная</a></li>
